--- a/template.handlebars
+++ b/template.handlebars
@@ -134,6 +134,7 @@ export declare namespace entity_{{name}} {
         filter: FilterRecords
         page: PageRecord
         set: SetRecord
+        where: WhereRecords
     }
     
     type SetRecord = (properties: Partial<NonReadOnlyProperties>) => SetRecordActionOptions
