--- a/templates/template.handlebars
+++ b/templates/template.handlebars
@@ -184,20 +184,22 @@ export declare namespace {{name}} {
     }
     
     export class {{name}} {
-        get: ((key: {{tableIndexName}}) => {go: GoRecord<Item>});
-        delete: ((key: {{tableIndexName}}) => {go: GoRecord<Item>}) | ((key: {{tableIndexName}}[]) => {go: GoRecord<Item[]>});
-        update: (key: {{tableIndexName}}) => {set: SetRecord};
-        patch: (key: {{tableIndexName}}) => {set: SetRecord};
-        put: ((record: Item) => {go: GoRecord<Item>}) | ((record: Item[]) => {go: GoRecord<Item[]>});
-        create: (record: Item) => {go: GoRecord<Item>};
-        find: (record: Partial<Item>) => RecordsActionOptions;
-        setIdentifier: (type: "model" | "table", value: string) => void
+        get(key: {{tableIndexName}}Facets): {go: GoRecord<Item>}
+        delete(key: {{tableIndexName}}Facets): {go: GoRecord<Item>})
+        delete(key: {{tableIndexName}}Facets[]): {go: GoRecord<Item[]>}
+        update(key: {{tableIndexName}}Facets): {set: SetRecord}
+        patch(key: {{tableIndexName}}Facets): {set: SetRecord}
+        put(record: Item): {go: GoRecord<Item>}
+        put(record: Item[]): {go: GoRecord<Item[]>}
+        create(record: Item): {go: GoRecord<Item>}
+        find(record: Partial<Item>): RecordsActionOptions
+        setIdentifier(type: "model" | "table", value: string): void
         query: {
             {{#each indexes}}
             {{#if hasSK}}
-            {{name}}: <T extends {{typeName}}>(key: T) => QueryOperations<{{typeName}}RemainingFacets<T>>
+            {{name}}<T extends {{typeName}}>(key: T): QueryOperations<{{typeName}}RemainingFacets<T>>
             {{else}}
-            {{name}}: (key: {{typeName}}) => RecordsActionOptions,
+            {{name}}(key: {{typeName}}): RecordsActionOptions,
             {{/if}}
             {{/each}}
         };
