further template errors

--- a/templates/template.handlebars
+++ b/templates/template.handlebars
@@ -185,8 +185,8 @@ export declare namespace {{name}} {
     
     export class {{name}} {
         get(key: {{tableIndexName}}Facets): {go: GoRecord<Item>}
-        delete(key: {{tableIndexName}}Facets): {go: GoRecord<Item>})
-        delete(key: {{tableIndexName}}Facets[]): {go: GoRecord<Item[]>
+        delete(key: {{tableIndexName}}Facets): {go: GoRecord<Item>}
+        delete(key: {{tableIndexName}}Facets[]): {go: GoRecord<Item[]>}
         update(key: {{tableIndexName}}Facets): {set: SetRecord}
         patch(key: {{tableIndexName}}Facets): {set: SetRecord}
         put(record: Item): {go: GoRecord<Item>}
