--- a/templates/template.handlebars
+++ b/templates/template.handlebars
@@ -140,12 +140,20 @@ export declare namespace {{pascal name}} {
     export type FilterAttributes<T extends Attributes> = {
         [K in keyof T]: FilterOperations<T[K]>;
     }
+
+    export type GoOptions = {
+        params?: object;
+        raw?: boolean;
+        includeKeys?: boolean;
+        originalErr?: boolean;
+        lastEvaluatedKeyRaw?: boolean;
+    };
     
-    export type GoRecord<T> = () => Promise<T>;
+    export type GoRecord<T> = (options: GoOptions = {}) => Promise<T>;
 
-    export type PageRecord = (page?: {{pascal tableIndexName}} | null) => Promise<[{{pascal tableIndexName}}Facets | null, Item[]]>;
+    export type PageRecord = (page?: {{pascal tableIndexName}} | null, options: GoOptions = {}) => Promise<[{{pascal tableIndexName}}Facets | null, Item[]]>;
 
-    export type ParamRecord = () => object;
+    export type ParamRecord = (options: GoOptions = {}) => object;
 
     export type FilterRecords<T> = (filter: <A extends Attributes>(record: FilterAttributes<A>) => string) => RecordsActionOptions<T>;
 
@@ -287,7 +295,6 @@ export declare namespace {{pascal name}}Collection {
     {{/each}}
     }
     
-    
     type FilterOperations<T> = {
         gte: (value: T) => string;
         gt: (value: T) => string;
@@ -307,12 +314,20 @@ export declare namespace {{pascal name}}Collection {
     type FilterAttributes<T extends Attributes> = {
         [K in keyof T]: FilterOperations<T[K]>;
     }
+
+    export type GoOptions = {
+        params?: object;
+        raw?: boolean;
+        includeKeys?: boolean;
+        originalErr?: boolean;
+        lastEvaluatedKeyRaw?: boolean;
+    };
     
-    type GoRecord<T> = () => Promise<T>;
+    type GoRecord<T> = (options: GoOptions = {}) => Promise<T>;
 
-    type PageRecord = (page?: Attributes | null) => Promise<[Attributes | null, Item[]]> ;
+    type PageRecord = (page?: Attributes | null, options: GoOptions = {}) => Promise<[Attributes | null, Item[]]> ;
 
-    type ParamRecord = () => object;
+    type ParamRecord = (options: GoOptions = {}) => object;
 
     type FilterRecords<T> = (filter: <A extends Attributes>(record: FilterAttributes<A>) => string) => RecordsActionOptions<T>;
 
