Adding begins to typedef template

--- a/templates/template.handlebars
+++ b/templates/template.handlebars
@@ -190,6 +190,7 @@ export declare namespace {{pascal name}} {
         gte: (skFacets: T) => RecordsActionOptions<Item[]>;
         lt: (skFacets: T) => RecordsActionOptions<Item[]>;
         lte: (skFacets: T) => RecordsActionOptions<Item[]>;
+        begins: (skFacets: T) => RecordsActionOptions<Item[]>;
         go: GoRecord<Item[]>;
         params: ParamRecord;
         page: PageRecord<Item[]>;
